tests/fixtures/invalid/int_rshift_bytes.py
# Cannot right shift Int by Bytes
x: int = 1 >> b"hello"
